--- a/rshandheld_cap/src/rshandheldcapture/CMakeLists.txt
+++ b/rshandheld_cap/src/rshandheldcapture/CMakeLists.txt
@@ -28,20 +28,21 @@ cmake_minimum_required(VERSION 2.8.3)
 
 project(rshandheld_capture)  ## this package name is the name of the directory this cmake file is in
 
-MESSAGE(STATUS "This is BINARY dir " ${RSHandheldCapture_BINARY_DIR})
+MESSAGE(STATUS "This is BINARY dir " ${CMAKE_PREFIX_PATH})
 ################################
 ##  CONFIGURE THIS FILE HERE  ##
 ################################
-#set(CMAKE_PREFIX_PATH "/home/tuxu/Qt/5.15.2/gcc_64")
+#set(CMAKE_PREFIX_PATH "/home/tuxu/Qt/5.15.2/gcc_64" ${CMAKE_PREFIX_PATH})
 
 #SET(CMAKE_BUILD_TYPE "Debug”)
-list(APPEND CMAKE_PREFIX_PATH "/home/tuxu/Qt/5.15.2/gcc_64/lib/cmake")
+#list(APPEND CMAKE_PREFIX_PATH "/home/tuxu/Qt/5.15.2/gcc_64")
 
 set(ROS_DEPENDS
   roscpp
   std_msgs
   image_transport
   cv_bridge
+  std_srvs
   )
 
 set(EXTERNAL_DEPENDS
@@ -51,6 +52,7 @@ set(EXTERNAL_DEPENDS
   Qt5Gui
   Qt5Quick
   Qt5Core
+  Qt5OpenGL
   )
 
 set(EXTERNAL_DEPENDS_LIB
@@ -60,35 +62,30 @@ set(EXTERNAL_DEPENDS_LIB
   Qt5::Gui
   Qt5::Quick
   Qt5::Core
-vtkGUISupportQtQuick-9.3
-vtkRenderingContextOpenGL2-9.3
-vtkTestingRendering-9.3
-vtkInteractionWidgets-9.3
-vtkRenderingOpenGL2-9.3
-vtkRenderingHyperTreeGrid-9.3
-vtkRenderingContext2D-9.3
-vtkIOImage-9.3
-vtkRenderingFreeType-9.3
-vtkfreetype-9.3
-vtkzlib-9.3
-vtkRenderingUI-9.3
-vtkRenderingCore-9.3
-vtkFiltersSources-9.3
-vtkFiltersGeneral-9.3
-vtkFiltersCore-9.3
-vtkCommonExecutionModel-9.3
-vtkCommonDataModel-9.3
-vtkCommonTransforms-9.3
-vtkCommonMisc-9.3
-vtkCommonMath-9.3
-vtkkissfft-9.3
-vtkCommonCore-9.3
-vtktoken-9.3
-vtksys-9.3
-vtkInteractionStyle-9.3
-vtkRenderingAnnotation-9.3
-vtkCommonComputationalGeometry-9.3
-vtkCommonColor-9.3
+  Qt5::OpenGL
+  vtkGUISupportQt-7.1
+vtkRenderingContextOpenGL2-7.1
+vtkTestingRendering-7.1
+vtkInteractionWidgets-7.1
+vtkRenderingOpenGL2-7.1
+vtkRenderingContext2D-7.1
+vtkIOImage-7.1
+vtkRenderingFreeType-7.1
+vtkRenderingCore-7.1
+vtkFiltersSources-7.1
+vtkFiltersGeneral-7.1
+vtkFiltersCore-7.1
+vtkCommonExecutionModel-7.1
+vtkCommonDataModel-7.1
+vtkCommonTransforms-7.1
+vtkCommonMisc-7.1
+vtkCommonMath-7.1
+vtkCommonCore-7.1
+vtksys-7.1
+vtkInteractionStyle-7.1
+vtkRenderingAnnotation-7.1
+vtkCommonComputationalGeometry-7.1
+vtkCommonColor-7.1
 RSSceneViewer
 )
 
@@ -100,8 +97,10 @@ add_compile_options(-std=c++14)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
 foreach(DEPEND ${EXTERNAL_DEPENDS})
-  find_package(${DEPEND} REQUIRED PATHS "/home/tuxu/Qt/5.15.2/gcc_64")
+  find_package(${DEPEND} REQUIRED)
 endforeach(DEPEND)
+
+#find_package(Qt${QT_VERSION_MAJOR} 5.15.2 EXACT REQUIRED COMPONENTS Core Quick Gui Qml Widgets)
 
 find_package(catkin REQUIRED COMPONENTS ${ROS_DEPENDS})
 
@@ -122,7 +121,7 @@ include_directories(
   ${INCLUDE_DIRECTORIES}
   ${CATKIN_DEVEL_PREFIX}/include
   ${CATKIN_DEVEL_PREFIX}/../3rdParty/RSSceneViewer/include
-  /usr/local/include/vtk-9.3
+  /usr/include/vtk-7.1
 )
 
 link_directories(
@@ -169,7 +168,7 @@ set(CMAKE_AUTOUIC ON)
 
 message("buliding ${PROJECT_NAME} node: ")
 
-set(NODE_NAME Viewer)
+set(NODE_NAME viewer)
 
 add_executable(${NODE_NAME} ${HDRS} ${SRCS} ${UI} ${QRC} ${QML})
 add_dependencies(${NODE_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
