--- a/rshandheld_cap/src/rshandheldcapture/package.xml
+++ b/rshandheld_cap/src/rshandheldcapture/package.xml
@@ -58,6 +58,8 @@
   <exec_depend>image_transport</exec_depend>
   <build_depend>cv_bridge</build_depend>
   <exec_depend>cv_bridge</exec_depend>
+  <build_depend>std_srvs</build_depend>
+  <exec_depend>std_srvs</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
